--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,7 @@
 {
-  "type": "module",
-  "main": "index.js",
+  "scripts": {
+    "start": "node index.mjs"
+  },
   "dependencies": {
     "node-fetch": "^3.3.2",
     "puppeteer": "^23.2.0"
